# OMCP

./: Cargo.toml  PKGBUILD  README.md  omcp.tape
.github/workflows/: publish-release.yml
src/: agent.rs  args.rs  chat.rs  main.rs  model.rs  settings.rs
src/tools/: mod.rs  server.rs  tool.rs
src/ui/: input.rs  mod.rs  tools.rs  utils.rs
